[package]
name = "cc-ftp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
actix-files = "0.6.2"

tokio = { version = "1.24.1", features = ["full"] }

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

flate2 ={ version = "1.0.25", features = ["zlib"] }
futures-util = "0.3.25"

anyhow = "1.0.68"

notify = {version = "5.0.0", default-features = false }

parking_lot = "0.12.1"